# axis_doc_tool

./: .gitignore  README.md  axis_doc_tool_full_planning_document 1.1.md  folder_structure.md  protocol_coverage_matrix.md  pyproject.toml
docs/: axis_doc_tool_plan.md  folder_structure.md  protocol_coverage_matrix.md
src/axis_doc/: app.py  cli.py  ipparse.py  tui.py
src/axis_doc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/axis_doc/axis/: capabilities.py  client.py
src/axis_doc/collector/: __init__.py  collector.py
src/axis_doc/models/: __init__.py  camera_doc.py  capabilities.py
src/axis_doc/render/: __init__.py  markdown.py
tests/: test_capabilities_resolver.py  test_cli_doc.py  test_ipparse.py  test_models_default.py  test_render_markdown.py
