[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "axis-doc-tool"
version = "0.1.0"
description = "Portable read-only documentation tool for Axis network cameras (Markdown/TXT/PDF)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Team" }
]
keywords = ["axis", "vapix", "cctv", "documentation", "tui", "rich"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "requests>=2.31",
  "rich>=13.7",
  "jinja2>=3.1",
  "PyYAML>=6.0",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.6",
  "types-PyYAML",
  "types-requests",
]
pdf = [
  # Pick ONE PDF backend later; reportlab is a safe default.
  "reportlab>=4.0",
]

[project.scripts]
axis-doc = "axis_doc.cli:main"
axis-doc-tui = "axis_doc.tui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/axis_doc"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
mypy_path = "src"
packages = ["axis_doc"]
